Working, complete barebones version - ready to deploy.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                     Beacon was our entry for the 2019 <a href="https://www.hujihackathon.co.il/">HUJI Hackathon competition</a>, <b>where it won third place</b> out of forty teams competing.<b> As team-leader and originator of the idea</b>,
                                     my responsibilites spanned the entire stack - devOps, architecture of the offline communication network, UI/UX design implementation and oversight of the project as a whole. <br> <br>
                                   <b>Beacon is currently in a closed-development hiatus, but is planned for renewed work and possible release in the upcoming months! More information will be available soon.</b> </p>
-                                  <hr class="divider"> Technology </hr>
+                                  <!-- <hr class="divider"> Technology </hr> -->
                                 </div><!--//desc-->
                                 <!-- <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank"><i class="fas fa-thumbs-up"></i> Back my project</a> -->
                             </div>
@@ -175,47 +175,30 @@
                     </div>
                 </section> -->
 
-                <section class="education aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Education</h2>
-                        <div class="content">
-                            <div class="item">
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> BSc Computer Science & Psychology</h3>
-                                <h4 class="university">The Hebrew University of Jerusalem <span class="year">(2017-2021)</span></h4>
-                                <h4 class="university"><span class="edu_desc">
-
-                            </div>
-                            <div class="item">
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> Secondary School</h3>
-                                <h4 class="university">Yigal Alon High School <span class="year">(2010-2012)</span><br> <span class="edu_desc"> Majored in Math, English, Philosophy and Film Arts </span></h4>
-
-                            </div>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </section><!--//section-->
 
 
-                <section class="experience section">
+
+                <!-- <section class="experience section">
                     <div class="section-inner">
                         <h2 class="heading">Experience</h2>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
                                 <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
-                            </div><!--//item-->
+                            </div>
                             <div class="item">
                                 <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
                                 <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
-                            </div><!--//item-->
+                            </div>
 
                             <div class="item">
                                 <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
                                 <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
-                            </div><!--//item-->
+                            </div>
 
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </section><!--//section-->
+                        </div>
+                    </div>
+                </section> -->
                 <!-- <section class="github section">
                     <div class="section-inner">
                         <h2 class="heading">My GitHub</h2>
@@ -236,14 +219,14 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Jerusalem, IL</li>
-                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">yuval@yuvgin.dev</a></li>
+                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto:yuvalginor@gmail.com">yuvalginor@gmail.com</a></li>
                                 <!-- <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://www.website.com</a></li> -->
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//aside-->
 
-                <section class="skills aside section">
+                <!-- <section class="skills aside section">
                     <div class="section-inner">
                         <h2 class="heading">Skills</h2>
                         <div class="content">
@@ -263,37 +246,37 @@
                                 <div class="item">
                                     <h3 class="level-title">Python<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
 
-                                </div><!--//item-->
+                                </div>
 
                                 <div class="item">
                                     <h3 class="level-title">Javascript &amp; jQuery<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
-                                    </div><!--//level-bar-->
-                                </div><!--//item-->
+                                    </div>
+                                </div>
 
                                 <div class="item">
                                     <h3 class="level-title">HTML5, CSS3, SASS &amp; LESS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>
-                                    </div><!--//level-bar-->
-                                </div><!--//item-->
+                                    </div>
+                                </div>
 
                                 <div class="item">
                                     <h3 class="level-title">Ruby on Rails<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to explain more about your skill level..."><i class="fas fa-info-circle"></i>Pro</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>
-                                    </div><!--//level-bar-->
-                                </div><!--//item-->
+                                    </div>
+                                </div>
 
                                 <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Coderwall</a></p>
                             </div>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </section><!--//section-->
+                        </div>
+                    </div>
+                </section> -->
 
                 <!-- <aside class="testimonials aside section">
                     <div class="section-inner">
@@ -340,7 +323,27 @@
                     </div>
                 </aside> -->
 
-                <aside class="list music aside section">
+
+                <aside class="education aside section">
+                    <div class="section-inner">
+                        <h2 class="heading">Education</h2>
+                        <div class="content">
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> BSc Computer Science & Psychology</h3>
+                                <h4 class="university">The Hebrew University of Jerusalem <span class="year">(2017-2021)</span><br><span class="edu_desc"> Second year. Total GPA 83.89, Programming GPA 89.72 </span></h4>
+                                <h4 class="university"><span class="edu_desc">
+
+                            </div>
+                            <div class="item">
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> Secondary School</h3>
+                                <h4 class="university">Yigal Alon High School <span class="year">(2010-2012)</span><br> <span class="edu_desc"> Majored in Math, English, Philosophy and Film Arts </span></h4>
+
+                            </div>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
+
+                <!-- <aside class="list music aside section">
                     <div class="section-inner">
                         <h2 class="heading">Some awesome music to code to</h2>
                         <span class="music-subtitle"> trust me on this one... </span>
@@ -351,9 +354,9 @@
                                 <li><i class="fas fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
                                 <li><i class="fas fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
                             </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
+                        </div>
+                    </div>
+                </aside> -->
 
 
                 <!-- <aside class="list conferences aside section">
