Changed email addresses to gmail. domain email is buggy.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <!-- <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li> -->
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="mailto:yuval@yuvgin.dev?subject=CV%20Request&body=Hi%20Yuval,%20please%20send%20me%20a%20copy%20of%20your%20CV" target="_blank"><i class="fas fa-file-alt"></i> Request CV</a>
+            <a class="btn btn-cta-primary float-right" href="mailto:yuvalginor@gmail.com?subject=CV%20Request&body=Hi%20Yuval,%20please%20send%20me%20a%20copy%20of%20your%20CV" target="_blank"><i class="fas fa-file-alt"></i> Request CV</a>
         </div><!--//container-->
     </header><!--//header-->
 
